--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <a class="nav-link active" href="index.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="read.html">Read</a>
+              <a class="nav-link" href="read.html">Read Poetry</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add.html">Add</a>
+              <a class="nav-link" href="add.html">Add Poetry</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -37,7 +37,7 @@
       <main class="container-fluid bg-secondary text-center">
         <div>
           <h1>Welcome to My Poetry Website</h1>
-          <p>Login to play</p>
+          <p>Login to get started</p>
           <form method="get" action="play.html">
             <input type="text" id="name" placeholder="Username" />
             <div>
@@ -51,8 +51,8 @@
       </main>
       <footer class="bg-dark text-dark text-muted">
         <div class="container-fluid">
-          <span class="text-reset">Author Name(s)</span>
-          <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">Source</a>
+          <span class="text-reset">ClaySharp</span>
+          <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">GitHub</a>
         </div>
       </footer>
 </body>
