--- a/add.html
+++ b/add.html
@@ -23,10 +23,10 @@
               <a class="nav-link" href="index.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="read.html">Read Poetry</a>
+              <a class="nav-link" href="read.html">Read Poetry</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add.html">Add Poetry</a>
+              <a class="nav-link active" href="add.html">Add Poetry</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -36,13 +36,16 @@
       </header>
       <main class="container-fluid bg-secondary text-center">
         <div class="poetry-card-bg">
-          <h1 class="poet-list-header">Read Poetry</h1>
-          <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Henry_David_Thoreau">Henry David Thoreau</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Walt_Whitman">Walt Whitman</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/William_Shakespeare">William Shakespeare</a></li>
-          </ul>
-          <p style="margin-top: 2em;">(I'm going to add more here once we add JavaScript)</p>
+          <h1 class="add-header">Add Poetry</h1>
+          <form method="get" action="play.html">
+            <div class="form-group">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" placeholder="Enter Poetry"></textarea>
+                <input type="text" id="name" placeholder="Enter Poet's Name" />
+                <div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+          </form>
         </div>
       </main>
       <footer class="bg-dark text-dark text-muted">
