add(login.js) also made minor fixes to footers and headers

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
               <a class="nav-link" href="index.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="read.html">Read Poetry</a>
+              <a class="nav-link" href="read.html">Discover</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add.html">Add Poetry</a>
+              <a class="nav-link" href="add.html">Create</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="about.html">About</a>
@@ -43,8 +43,9 @@
           </p>
         </div>
       </main>
+      
       <footer class="bg-dark text-dark text-muted">
-        <div class="container-fluid">
+        <div class="footer-div container-fluid">
           <span class="text-reset">ClaySharp</span>
           <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">GitHub</a>
         </div>
