--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
               <a class="nav-link" href="index.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="read.html">Discover</a>
+              <a class="nav-link" href="add.html">Write</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add.html">Create</a>
+              <a class="nav-link" href="read.html">Library</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="about.html">About</a>
