--- a/add.html
+++ b/add.html
@@ -5,55 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPoetry</title>
-    <!-- Reference for Favicon, Stylesheet, and Bootstrap framework-->
+    
     <link rel="icon" href="source_book_favicon.png" />
-    <link rel="stylesheet" href="main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="main.css" />
 </head>
-<body class="bg-dark text-light">
-    <header class="container-fluid">
-        <nav class="navbar navbar-dark">
-          <menu class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="read.html">Discover</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="add.html">Create</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-          </menu>
-        </nav>
-      </header>
-      <main class="container-fluid bg-secondary text-center">
-        <div class="poetry-card-bg">
-          <h1 class="add-header">Add Poetry</h1>
-          <form method="get" action="play.html">
-            <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="2" placeholder="Enter Poetry"></textarea>
-                <input type="text" id="name" placeholder="Enter Poet's Name" />
-                <div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-            </div>
-          </form>
-        </div>
-      </main>
 
-      <footer class="bg-dark text-dark text-muted">
-        <div class="footer-div container-fluid">
-          <span class="text-reset">ClaySharp</span>
-          <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">GitHub</a>
+<body class="bg-dark text-light">
+
+  <header class="container-fluid">
+    <nav class="navbar navbar-dark">
+      <menu class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="add.html">Write</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="read.html">Library</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </menu>
+    </nav>
+  </header>
+    
+  <main class="container-fluid bg-secondary text-center">
+    <div class="poetry-card-bg">
+      <h1 class="add-header">Add Poetry</h1>
+      <div class="add-poetry-textarea">
+        <div>
+          <textarea id="poem-from-textarea" class="form-control" rows="2" placeholder="Enter Poetry"></textarea>
         </div>
-      </footer>
+        <div class="add-poetry-input">
+          <input id="title-from-input" type="text" placeholder="Poem Title" />
+        </div>
+        <div class="add-poetry-submit">
+            <button type="submit" onclick="addPoem()" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="bg-dark text-dark text-muted">
+    <div class="footer-div container-fluid">
+      <span class="text-reset">ClaySharp</span>
+      <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">GitHub</a>
+    </div>
+  </footer>
+
+  <script src="add.js"></script>
 </body>
 </html>
