--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPoetry</title>
-    <!-- Reference for Favicon, Stylesheet, and Bootstrap framework-->
+
     <link rel="icon" href="source_book_favicon.png" />
-    <link rel="stylesheet" href="main.css" />
-    <script src="login.js"></script>
-    <link rel="stylesheet" href="main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="main.css" />
+
+    <script src="login.js"></script>
 </head>
 
 <body class="bg-dark text-light">
-  
+
   <header class="container-fluid">
     <nav class="navbar navbar-dark">
       <menu class="navbar-nav">
@@ -27,10 +27,10 @@
           <a class="nav-link active" href="index.html">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="read.html">Discover</a>
+          <a class="nav-link" href="add.html">Write</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="add.html">Create</a>
+          <a class="nav-link" href="read.html">Library</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
@@ -41,10 +41,10 @@
 
       <main class="container-fluid bg-secondary text-center">
         <div>
-          <h1>Welcome to My Poetry Website</h1>
+          <h1>Welcome to Your Poetry Website</h1>
           <p>Login to get started</p>
             <input type="text" id="name" placeholder="Username" />
-            <div>
+            <div class="login-screen">
                 <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
             </div>
         </div>
