--- a/read.html
+++ b/read.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPoetry</title>
-    <!-- Reference for Favicon, Stylesheet, and Bootstrap framework-->
+    
     <link rel="icon" href="source_book_favicon.png" />
-    <link rel="stylesheet" href="main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="main.css" />
+
+    <!--This is where JS will go-->
+    
 </head>
-<body class="bg-dark text-light">
+
+<body class="bg-dark text-light" onload="createList()">
+
     <header class="container-fluid">
         <nav class="navbar navbar-dark">
           <menu class="navbar-nav">
@@ -23,10 +28,10 @@
               <a class="nav-link" href="index.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="read.html">Discover</a>
+              <a class="nav-link" href="add.html">Write</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="add.html">Create</a>
+              <a class="nav-link active" href="read.html">Library</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
@@ -34,16 +39,11 @@
           </menu>
         </nav>
       </header>
+
       <main class="container-fluid bg-secondary text-center">
-        <div class="poetry-card-bg">
-          <h1 class="poet-list-header">Read Poetry</h1>
-          <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Henry_David_Thoreau">Henry David Thoreau</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Walt_Whitman">Walt Whitman</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/William_Shakespeare">William Shakespeare</a></li>
-          </ul>
-          <p style="margin-top: 2em;">(I'm going to add more here once we add JavaScript)</p>
-        </div>
+        <div class="poetry-card-read"">
+          <h1 class="poet-list-header">Your Poetry</h1>
+          <div id="output"></div>
       </main>
 
       <footer class="bg-dark text-dark text-muted">
@@ -52,5 +52,8 @@
           <a class="text-reset" href="https://github.com/ClaySharp/simon-game-application">GitHub</a>
         </div>
       </footer>
+
+      <script src="read.js"></script>
+
 </body>
 </html>
