update(JS references) changed references

--- a/read.html
+++ b/read.html
@@ -43,7 +43,9 @@
       <main class="container-fluid bg-secondary text-center">
         <div class="poetry-card-read"">
           <h1 class="poet-list-header">Your Poetry</h1>
-          <div id="output"></div>
+          <div id="output">
+            Add Some Poetry By Clicking On 'Write'.
+          </div>
       </main>
 
       <footer class="bg-dark text-dark text-muted">
